[package]
name = "mailtutan-web"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description = "The Frontend developed for mailtutan project which is an SMTP server for test and development environments."

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.11"
serde_json = "1.0.140"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
gloo-dialogs = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4"
futures = "0.3.28"
log = "0.4.6"
wasm-logger = "0.2.0"
url = "2.4.0"

[dependencies.web-sys]
version = "0.3.63"
features = [
	"HtmlLiElement",
  "HtmlTableCellElement",
  "HtmlIFrameElement"
]
